fix script removal

--- a/index.html
+++ b/index.html
@@ -803,7 +803,8 @@
             <p class="copiring">All Rights Reserved. Envato Bangladesh © 2015</p>
         </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/source-js/main.js"></script>
 </div>
 </body>
 </html>
